--- a/index.html
+++ b/index.html
@@ -153,28 +153,28 @@
                 <th>Highlights</th>
             </tr>
             <tr class="day1-row">
-                <td>Tower of London</td>
+                <td><a href="https://maps.app.goo.gl/5ojhAf6tCXdYB1tA8" target="_blank">Tower of London</a></td>
                 <td>9:00 AM – 12:00 PM</td>
                 <td>-</td>
                 <td>9:00 AM – 5:30 PM (last admission 4:30 PM)</td>
                 <td>Explore the historic castle, Crown Jewels, and Yeoman Warders.</td>
             </tr>
             <tr class="day1-row">
-                <td>Borough Market</td>
+                <td><a href="https://maps.app.goo.gl/bweu8EPN6uR8MZNu6" target="_blank">Borough Market</a></td>
                 <td>If time permits</td>
                 <td>30-minute walk</td>
                 <td>9:00 AM – 5:00 PM</td>
                 <td>Enjoy a variety of food stalls and local delicacies.</td>
             </tr>
             <tr class="day1-row">
-                <td>The View from The Shard</td>
+                <td><a href="https://maps.app.goo.gl/uKbZLzS5PK8eAzRX7" target="_blank">The View from The Shard</a></td>
                 <td>1:30 PM – 2:30 PM</td>
                 <td>20-minute walk</td>
                 <td>10:00 AM – 10:00 PM (last entry 9:00 PM)</td>
                 <td>Experience panoramic views of London from the observation deck.</td>
             </tr>
             <tr class="day1-row">
-                <td>Palace of Westminster</td>
+                <td><a href="https://maps.app.goo.gl/fM4ffnn9NAJarrpe7" target="_blank">Palace of Westminster</a></td>
                 <td>4:00 PM – 4:45 PM</td>
                 <td>30-minute travel</td>
                 <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
@@ -195,21 +195,21 @@
                 <th>Highlights</th>
             </tr>
             <tr class="day2-row">
-                <td>The South Bank Photography</td>
+                <td><a href="https://maps.app.goo.gl/5eZYP8D6Hts6mr42A" target="_blank">The South Bank Photography</a></td>
                 <td>8:00 AM – 9:30 AM</td>
                 <td>-</td>
                 <td>-</td>
                 <td>Capture iconic views of the London Eye, Big Ben, & the Thames.</td>
             </tr>
             <tr class="day2-row">
-                <td>London Zoo & Regent's Park</td>
+                <td><a href="https://maps.app.goo.gl/tfLnHkmEzhvgRG6NA" target="_blank">London Zoo & Regent's Park</a></td>
                 <td>10:30 AM – 1:30 PM</td>
                 <td>45-minute travel</td>
                 <td>10:00 AM – 6:00 PM (last admission 5:00 PM)</td>
                 <td>Explore diverse animal exhibits and interactive displays.</td>
             </tr>
             <tr class="day2-row">
-                <td>Natural History Museum</td>
+                <td><a href="https://maps.app.goo.gl/njXNEYrf8YTnzbNK6" target="_blank">Natural History Museum</a></td>
                 <td>3:00 PM – 5:30 PM</td>
                 <td>45-minute travel</td>
                 <td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
@@ -230,28 +230,28 @@
                 <th>Highlights</th>
             </tr>
             <tr class="day3-row">
-                <td>Westminster Abbey</td>
+                <td><a href="https://maps.app.goo.gl/NVKSzQVuGLTHicjr8" target="_blank">Westminster Abbey</a></td>
                 <td>9:30 AM – 11:00 AM</td>
                 <td>-</td>
                 <td>9:30 AM – 3:30 PM (last entry 3:00 PM)</td>
                 <td>Visit the historic church known for royal ceremonies.</td>
             </tr>
             <tr class="day3-row">
-                <td>Horse Guards Parade</td>
+                <td><a href="https://maps.app.goo.gl/9vo46LGErMH6TtDk6" target="_blank">Horse Guards Parade</a></td>
                 <td>11:15 AM – 12:30 PM</td>
                 <td>10-minute walk</td>
                 <td>-</td>
                 <td>Witness the Changing of the Guard ceremony.</td>
             </tr>
             <tr class="day3-row">
-                <td>St. Paul's Cathedral</td>
+                <td><a href="https://maps.app.goo.gl/NcRKrri8ey6ntpQa8" target="_blank">St. Paul's Cathedral</a></td>
                 <td>1:30 PM – 3:30 PM</td>
                 <td>15-minute travel</td>
                 <td>8:30 AM – 4:30 PM (last entry 4:00 PM)</td>
                 <td>Explore the iconic dome and crypt.</td>
             </tr>
             <tr class="day3-row">
-                <td>Little Venice</td>
+                <td><a href="https://maps.app.goo.gl/dmvmfJny2yHFygZ89" target="_blank">Little Venice</a></td>
                 <td>4:00 PM – 5:30 PM</td>
                 <td>30-minute travel</td>
                 <td>-</td>
@@ -272,21 +272,21 @@
                 <th>Highlights</th>
             </tr>
             <tr class="day4-row">
-                <td>Thames River Cruise</td>
+                <td><a href="https://maps.app.goo.gl/2UBFx7GzXmYPcuE79" target="_blank">Thames River Cruise</a></td>
                 <td>10:00 AM</td>
                 <td>Hop on Hop off (Stop #16) to Westminster Pier</td>
                 <td>-</td>
                 <td>View landmarks like Tower Bridge and the Shard from the river.</td>
             </tr>
             <tr class="day4-row">
-                <td>London Eye</td>
+                <td><a href="https://maps.app.goo.gl/Hc9BxYN7G6PcEnPw7" target="_blank">London Eye</a></td>
                 <td>12:30 PM – 1:30 PM</td>
                 <td>10-minute walk</td>
                 <td>11:00 AM – 6:00 PM</td>
                 <td>Experience panoramic views of London from the giant Ferris wheel.</td>
             </tr>
             <tr class="day4-row">
-                <td>Hop on Hop off & Notting Hill</td>
+                <td><a href="https://maps.app.goo.gl/6BPH3Z269joYaSA36" target="_blank">Hop on Hop off & Notting Hill</a></td>
                 <td>2:30 PM – 6:00 PM</td>
                 <td>Hop on Hop off</td>
                 <td>-</td>
@@ -307,28 +307,28 @@
                 <th>Highlights</th>
             </tr>
             <tr class="day5-row">
-                <td>Hyde Park</td>
+                <td><a href="https://maps.app.goo.gl/Fved7rZQojmG2wJJ9" target="_blank">Hyde Park</a></td>
                 <td>9:00 AM – 10:30 AM</td>
                 <td>-</td>
                 <td>5:00 AM – 12:00 AM</td>
                 <td>Relax in one of London's largest parks, visit the Serpentine Lake.</td>
             </tr>
             <tr class="day5-row">
-                <td>Buckingham Palace (Exterior Viewing)</td>
+                <td><a href="https://maps.app.goo.gl/FxAgnKP9hhqFuS6X6" target="_blank">Buckingham Palace (Exterior Viewing)</a></td>
                 <td>10:30 AM – 12:00 PM</td>
                 <td>15-minute walk</td>
                 <td>-</td>
                 <td>Experience change of guard parade.</td>
             </tr>
             <tr class="day5-row">
-                <td>British Museum</td>
+                <td><a href="https://maps.app.goo.gl/83bwRRrimJd5ELyt7" target="_blank">British Museum</a></td>
                 <td>12:30 PM – 3:00 PM</td>
                 <td>20-minute travel</td>
                 <td>10:00 AM – 5:00 PM (Fridays until 8:30 PM)</td>
                 <td>Discover artifacts from ancient civilizations.</td>
             </tr>
             <tr class="day5-row">
-                <td>Dr. B.R. Ambedkar House</td>
+                <td><a href="https://maps.app.goo.gl/1SM6VuqmrqAyD99n6" target="_blank">Dr. B.R. Ambedkar House</a></td>
                 <td>3:30 PM – 4:30 PM</td>
                 <td>30-minute travel</td>
                 <td>11:00 AM – 5:00 PM (Monday to Friday)</td>
