--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👑 5 Days London Itinerary: June 21–25, 2025</title>
+    <title>👑 London Itinerary: June 21–25, 2025</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -137,7 +137,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🌆 London Itinerary: June 21–25, 2025</h1>
+        <h1>👑 London Itinerary: June 21–25, 2025</h1>
         <h2>For Four People</h2>
 
         <!-- Day 1 -->
