--- a/index.html
+++ b/index.html
@@ -133,7 +133,46 @@
             font-size: .9em;
             color: #666;
         }
-    </style>
+    
+@media screen and (max-width: 768px) {
+    body {
+        margin: 10px;
+        padding: 0;
+        font-size: 14px;
+    }
+    .container {
+        padding: 15px;
+    }
+    h1 {
+        font-size: 24px;
+        padding: 15px;
+    }
+    h2 {
+        font-size: 18px;
+    }
+    table, thead, tbody, th, td, tr {
+        display: block;
+        width: 100%;
+    }
+    table {
+        border: none;
+    }
+    th, td {
+        padding: 10px;
+        text-align: left;
+        border: none;
+        border-bottom: 1px solid #ddd;
+    }
+    tr {
+        margin-bottom: 15px;
+    }
+    .day-header td {
+        text-align: center;
+        font-weight: bold;
+    }
+}
+
+</style>
 </head>
 <body>
     <div class="container">
