--- a/index.html
+++ b/index.html
@@ -142,33 +142,22 @@
     }
     .container {
         padding: 15px;
-    }
-    h1 {
-        font-size: 24px;
-        padding: 15px;
-    }
-    h2 {
-        font-size: 18px;
-    }
-    table, thead, tbody, th, td, tr {
-        display: block;
-        width: 100%;
+        overflow-x: auto;
     }
     table {
-        border: none;
+        width: 100%;
+        table-layout: auto;
+        word-wrap: break-word;
     }
     th, td {
         padding: 10px;
-        text-align: left;
-        border: none;
-        border-bottom: 1px solid #ddd;
+        font-size: 14px;
     }
-    tr {
-        margin-bottom: 15px;
+    h1 {
+        font-size: 26px;
     }
-    .day-header td {
-        text-align: center;
-        font-weight: bold;
+    h2 {
+        font-size: 18px;
     }
 }
 
