--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>👑 London Itinerary: June 21–25, 2025</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -164,7 +164,7 @@
 </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="overflow-x: auto; zoom: 0.9;">
         <h1>👑 London Itinerary: June 21–25, 2025</h1>
         <h2>For Four People</h2>
 
