--- a/index.html
+++ b/index.html
@@ -105,15 +105,9 @@
             color: white;
             text-align: center;
         }
-        
-.day1 { background-color: #A3DFFA; }
-.day1-row {
-    background-color: #D6EFFF;
-    padding: 12px !important;
-    font-size: 15px !important;
-}
-.day1-row:hover { background-color: #E6F0FA; }
-
+        .day1 { background-color: #A3DFFA; }
+        .day1-row { background-color: #D6EFFF; }
+        .day1-row:hover { background-color: #E6F0FA; }
         .day2 { background-color: #B7F7C8; }
         .day2-row { background-color: #E0FAE6; }
         .day2-row:hover { background-color: #EBF9EE; }
@@ -146,49 +140,50 @@
         <h1>👑 London Itinerary: June 21–25, 2025</h1>
         <h2>For Four People</h2>
 
-        <!-- Day 1 -->
-        <table>
-            <tr class="day-header day1">
-                <td colspan="5">Day 1: June 21 (Saturday)</td>
-            </tr>
-            <tr>
-                <th>Attraction</th>
-                <th>Time</th>
-                <th>Travel</th>
-                <th>Opening Hours</th>
-                <th>Highlights</th>
-            </tr>
-            <tr class="day1-row">
-                <td><a href="https://maps.app.goo.gl/5ojhAf6tCXdYB1tA8" target="_blank">Tower of London</a></td>
-                <td>9:00 AM – 12:00 PM</td>
-                <td>-</td>
-                <td>9:00 AM – 5:30 PM (last admission 4:30 PM)</td>
-                <td>Explore the historic castle, Crown Jewels, and Yeoman Warders.</td>
-            </tr>
-            <tr class="day1-row">
-                <td><a href="https://maps.app.goo.gl/bweu8EPN6uR8MZNu6" target="_blank">Borough Market</a></td>
-                <td>If time permits</td>
-                <td>30-minute walk</td>
-                <td>9:00 AM – 5:00 PM</td>
-                <td>Enjoy a variety of food stalls and local delicacies.</td>
-            </tr>
-            <tr class="day1-row">
-                <td><a href="https://maps.app.goo.gl/uKbZLzS5PK8eAzRX7" target="_blank">The View from The Shard</a></td>
-                <td>1:30 PM – 2:30 PM</td>
-                <td>20-minute walk</td>
-                <td>10:00 AM – 10:00 PM (last entry 9:00 PM)</td>
-                <td>Experience panoramic views of London from the observation deck.</td>
-            </tr>
-            <tr class="day1-row">
-                <td><a href="https://maps.app.goo.gl/fM4ffnn9NAJarrpe7" target="_blank">Palace of Westminster</a></td>
-                <td>4:00 PM – 4:45 PM</td>
-                <td>30-minute travel</td>
-                <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
-                <td>Houses of Parliament after the House of Commons & the House of Lords, the two legislative chambers which occupy the building.</td>
-            </tr>
-        </table>
+        
+<!-- Day 1 (Optimized like Day 2) -->
+<table>
+    <tr class="day-header day1">
+        <td colspan="5">Day 1: June 21 (Saturday)</td>
+    </tr>
+    <tr>
+        <th>Attraction</th>
+        <th>Time</th>
+        <th>Travel</th>
+        <th>Opening Hours</th>
+        <th>Highlights</th>
+    </tr>
+    <tr class="day1-row">
+        <td><a href="https://maps.app.goo.gl/5ojhAf6tCXdYB1tA8" target="_blank">Tower of London</a></td>
+        <td>9:00 AM – 12:00 PM</td>
+        <td>-</td>
+        <td>9:00 AM – 5:30 PM</td>
+        <td>Crown Jewels, Yeoman Warders, and castle tour.</td>
+    </tr>
+    <tr class="day1-row">
+        <td><a href="https://maps.app.goo.gl/bweu8EPN6uR8MZNu6" target="_blank">Borough Market</a></td>
+        <td>If time permits</td>
+        <td>30-minute walk</td>
+        <td>9:00 AM – 5:00 PM</td>
+        <td>Food stalls & local delicacies.</td>
+    </tr>
+    <tr class="day1-row">
+        <td><a href="https://maps.app.goo.gl/uKbZLzS5PK8eAzRX7" target="_blank">The View from The Shard</a></td>
+        <td>1:30 PM – 2:30 PM</td>
+        <td>20-minute walk</td>
+        <td>10:00 AM – 10:00 PM</td>
+        <td>Panoramic views of London from the deck.</td>
+    </tr>
+    <tr class="day1-row">
+        <td><a href="https://maps.app.goo.gl/fM4ffnn9NAJarrpe7" target="_blank">Palace of Westminster</a></td>
+        <td>4:00 PM – 4:45 PM</td>
+        <td>30-minute travel</td>
+        <td>9:00 AM – 4:15 PM</td>
+        <td>Tour Parliament’s House of Commons & Lords.</td>
+    </tr>
+</table>
 
-        <!-- Day 2 -->
+<!-- Day 2 -->
         <table>
             <tr class="day-header day2">
                 <td colspan="5">Day 2: June 22 (Sunday)</td>
