--- a/index.html
+++ b/index.html
@@ -133,7 +133,27 @@
             font-size: .9em;
             color: #666;
         }
-    </style>
+    
+
+@media screen and (max-width: 768px) {
+    table {
+        font-size: 12px;
+    }
+    th, td {
+        padding: 8px;
+    }
+    .container {
+        padding: 10px;
+    }
+    h1 {
+        font-size: 24px;
+        padding: 15px;
+    }
+    h2 {
+        font-size: 18px;
+    }
+}
+</style>
 </head>
 <body>
     <div class="container">
