--- a/index.html
+++ b/index.html
@@ -153,6 +153,17 @@
         font-size: 18px;
     }
 }
+
+
+.container {
+    overflow-x: auto;
+    box-sizing: border-box;
+}
+table {
+    max-width: 100%;
+    table-layout: fixed;
+    word-wrap: break-word;
+}
 </style>
 </head>
 <body>
