--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
         return gk_fileData[filename] || "";
         }
         </script><!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>👑 London Itinerary: June 21–25, 2025</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet"/>
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>👑 London Itinerary: June 21–25, 2025</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
         body {
             font-family: 'Poppins', sans-serif;
             margin: 20px;
@@ -134,206 +133,217 @@
             font-size: .9em;
             color: #666;
         }
-    </style>
+    
+.table-wrapper {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+</style>
 </head>
 <body>
-<div class="container">
-<h1>👑 London Itinerary: June 21–25, 2025</h1>
-<h2>For Four People</h2>
-<!-- Day 1 -->
-<div style="overflow-x: auto; margin-bottom: 40px;"><table>
-<tr class="day-header day1">
-<td colspan="5">Day 1: June 21 (Saturday)</td>
-</tr>
-<tr>
-<th>Attraction</th>
-<th>Time</th>
-<th>Travel</th>
-<th>Opening Hours</th>
-<th>Highlights</th>
-</tr>
-<tr class="day1-row">
-<td><a href="https://maps.app.goo.gl/5ojhAf6tCXdYB1tA8" target="_blank">Tower of London</a></td>
-<td>9:00 AM – 12:00 PM</td>
-<td>-</td>
-<td>9:00 AM – 5:30 PM (last admission 4:30 PM)</td>
-<td>Explore the historic castle, Crown Jewels, and Yeoman Warders.</td>
-</tr>
-<tr class="day1-row">
-<td><a href="https://maps.app.goo.gl/bweu8EPN6uR8MZNu6" target="_blank">Borough Market</a></td>
-<td>If time permits</td>
-<td>30-minute walk</td>
-<td>9:00 AM – 5:00 PM</td>
-<td>Enjoy a variety of food stalls and local delicacies.</td>
-</tr>
-<tr class="day1-row">
-<td><a href="https://maps.app.goo.gl/uKbZLzS5PK8eAzRX7" target="_blank">The View from The Shard</a></td>
-<td>1:30 PM – 2:30 PM</td>
-<td>20-minute walk</td>
-<td>10:00 AM – 10:00 PM (last entry 9:00 PM)</td>
-<td>Experience panoramic views of London from the observation deck.</td>
-</tr>
-<tr class="day1-row">
-<td><a href="https://maps.app.goo.gl/fM4ffnn9NAJarrpe7" target="_blank">Palace of Westminster</a></td>
-<td>4:00 PM – 4:45 PM</td>
-<td>30-minute travel</td>
-<td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
-<td>Houses of Parliament after the House of Commons &amp; the House of Lords, the two legislative chambers which occupy the building.</td>
-</tr>
-</table></div>
-<!-- Day 2 -->
-<div style="overflow-x: auto; margin-bottom: 40px;"><table>
-<tr class="day-header day2">
-<td colspan="5">Day 2: June 22 (Sunday)</td>
-</tr>
-<tr>
-<th>Attraction</th>
-<th>Time</th>
-<th>Travel</th>
-<th>Opening Hours</th>
-<th>Highlights</th>
-</tr>
-<tr class="day2-row">
-<td><a href="https://maps.app.goo.gl/5eZYP8D6Hts6mr42A" target="_blank">The South Bank Photography</a></td>
-<td>8:00 AM – 9:30 AM</td>
-<td>-</td>
-<td>-</td>
-<td>Capture iconic views of the London Eye, Big Ben, &amp; the Thames.</td>
-</tr>
-<tr class="day2-row">
-<td><a href="https://maps.app.goo.gl/tfLnHkmEzhvgRG6NA" target="_blank">London Zoo &amp; Regent's Park</a></td>
-<td>10:30 AM – 1:30 PM</td>
-<td>45-minute travel</td>
-<td>10:00 AM – 6:00 PM (last admission 5:00 PM)</td>
-<td>Explore diverse animal exhibits and interactive displays.</td>
-</tr>
-<tr class="day2-row">
-<td><a href="https://maps.app.goo.gl/njXNEYrf8YTnzbNK6" target="_blank">Natural History Museum</a></td>
-<td>3:00 PM – 5:30 PM</td>
-<td>45-minute travel</td>
-<td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
-<td>Discover exhibits on dinosaurs, human evolution, and more.</td>
-</tr>
-</table></div>
-<!-- Day 3 -->
-<div style="overflow-x: auto; margin-bottom: 40px;"><table>
-<tr class="day-header day3">
-<td colspan="5">Day 3: June 23 (Monday)</td>
-</tr>
-<tr>
-<th>Attraction</th>
-<th>Time</th>
-<th>Travel</th>
-<th>Opening Hours</th>
-<th>Highlights</th>
-</tr>
-<tr class="day3-row">
-<td><a href="https://maps.app.goo.gl/NVKSzQVuGLTHicjr8" target="_blank">Westminster Abbey</a></td>
-<td>9:30 AM – 11:00 AM</td>
-<td>-</td>
-<td>9:30 AM – 3:30 PM (last entry 3:00 PM)</td>
-<td>Visit the historic church known for royal ceremonies.</td>
-</tr>
-<tr class="day3-row">
-<td><a href="https://maps.app.goo.gl/9vo46LGErMH6TtDk6" target="_blank">Horse Guards Parade</a></td>
-<td>11:15 AM – 12:30 PM</td>
-<td>10-minute walk</td>
-<td>-</td>
-<td>Witness the Changing of the Guard ceremony.</td>
-</tr>
-<tr class="day3-row">
-<td><a href="https://maps.app.goo.gl/NcRKrri8ey6ntpQa8" target="_blank">St. Paul's Cathedral</a></td>
-<td>1:30 PM – 3:30 PM</td>
-<td>15-minute travel</td>
-<td>8:30 AM – 4:30 PM (last entry 4:00 PM)</td>
-<td>Explore the iconic dome and crypt.</td>
-</tr>
-<tr class="day3-row">
-<td><a href="https://maps.app.goo.gl/dmvmfJny2yHFygZ89" target="_blank">Little Venice</a></td>
-<td>4:00 PM – 5:30 PM</td>
-<td>30-minute travel</td>
-<td>-</td>
-<td>Peaceful canal walk &amp; picturesque views.</td>
-</tr>
-</table></div>
-<!-- Day 4 -->
-<div style="overflow-x: auto; margin-bottom: 40px;"><table>
-<tr class="day-header day4">
-<td colspan="5">Day 4: June 24 (Tuesday)</td>
-</tr>
-<tr>
-<th>Attraction</th>
-<th>Time</th>
-<th>Travel</th>
-<th>Opening Hours</th>
-<th>Highlights</th>
-</tr>
-<tr class="day4-row">
-<td><a href="https://maps.app.goo.gl/2UBFx7GzXmYPcuE79" target="_blank">Thames River Cruise</a></td>
-<td>10:00 AM</td>
-<td>Hop on Hop off (Stop #16) to Westminster Pier</td>
-<td>-</td>
-<td>View landmarks like Tower Bridge and the Shard from the river.</td>
-</tr>
-<tr class="day4-row">
-<td><a href="https://maps.app.goo.gl/Hc9BxYN7G6PcEnPw7" target="_blank">London Eye</a></td>
-<td>12:30 PM – 1:30 PM</td>
-<td>10-minute walk</td>
-<td>11:00 AM – 6:00 PM</td>
-<td>Experience panoramic views of London from the giant Ferris wheel.</td>
-</tr>
-<tr class="day4-row">
-<td><a href="https://maps.app.goo.gl/6BPH3Z269joYaSA36" target="_blank">Hop on Hop off &amp; Notting Hill</a></td>
-<td>2:30 PM – 6:00 PM</td>
-<td>Hop on Hop off</td>
-<td>-</td>
-<td>Explore Portobello Road Market Lancaster Rd.</td>
-</tr>
-</table></div>
-<!-- Day 5 -->
-<div style="overflow-x: auto; margin-bottom: 40px;"><table>
-<tr class="day-header day5">
-<td colspan="5">Day 5: June 25 (Wednesday)</td>
-</tr>
-<tr>
-<th>Attraction</th>
-<th>Time</th>
-<th>Travel</th>
-<th>Opening Hours</th>
-<th>Highlights</th>
-</tr>
-<tr class="day5-row">
-<td><a href="https://maps.app.goo.gl/Fved7rZQojmG2wJJ9" target="_blank">Hyde Park</a></td>
-<td>9:00 AM – 10:30 AM</td>
-<td>-</td>
-<td>5:00 AM – 12:00 AM</td>
-<td>Relax in one of London's largest parks, visit the Serpentine Lake.</td>
-</tr>
-<tr class="day5-row">
-<td><a href="https://maps.app.goo.gl/FxAgnKP9hhqFuS6X6" target="_blank">Buckingham Palace (Exterior Viewing)</a></td>
-<td>10:30 AM – 12:00 PM</td>
-<td>15-minute walk</td>
-<td>-</td>
-<td>Experience change of guard parade.</td>
-</tr>
-<tr class="day5-row">
-<td><a href="https://maps.app.goo.gl/83bwRRrimJd5ELyt7" target="_blank">British Museum</a></td>
-<td>12:30 PM – 3:00 PM</td>
-<td>20-minute travel</td>
-<td>10:00 AM – 5:00 PM (Fridays until 8:30 PM)</td>
-<td>Discover artifacts from ancient civilizations.</td>
-</tr>
-<tr class="day5-row">
-<td><a href="https://maps.app.goo.gl/1SM6VuqmrqAyD99n6" target="_blank">Dr. B.R. Ambedkar House</a></td>
-<td>3:30 PM – 4:30 PM</td>
-<td>30-minute travel</td>
-<td>11:00 AM – 5:00 PM (Monday to Friday)</td>
-<td>Explore the life and work of Dr. B.R. Ambedkar.</td>
-</tr>
-</table></div>
-</div>
-<div class="footer">
-<p>Created by Amit, in love with the UK</p>
+    <div class="container">
+        <h1>👑 London Itinerary: June 21–25, 2025</h1>
+        <h2>For Four People</h2>
+
+        <!-- Day 1 -->
+        <div class="table-wrapper"><table>
+            <tr class="day-header day1">
+                <td colspan="5">Day 1: June 21 (Saturday)</td>
+            </tr>
+            <tr>
+                <th>Attraction</th>
+                <th>Time</th>
+                <th>Travel</th>
+                <th>Opening Hours</th>
+                <th>Highlights</th>
+            </tr>
+            <tr class="day1-row">
+                <td><a href="https://maps.app.goo.gl/5ojhAf6tCXdYB1tA8" target="_blank">Tower of London</a></td>
+                <td>9:00 AM – 12:00 PM</td>
+                <td>-</td>
+                <td>9:00 AM – 5:30 PM (last admission 4:30 PM)</td>
+                <td>Explore the historic castle, Crown Jewels, and Yeoman Warders.</td>
+            </tr>
+            <tr class="day1-row">
+                <td><a href="https://maps.app.goo.gl/bweu8EPN6uR8MZNu6" target="_blank">Borough Market</a></td>
+                <td>If time permits</td>
+                <td>30-minute walk</td>
+                <td>9:00 AM – 5:00 PM</td>
+                <td>Enjoy a variety of food stalls and local delicacies.</td>
+            </tr>
+            <tr class="day1-row">
+                <td><a href="https://maps.app.goo.gl/uKbZLzS5PK8eAzRX7" target="_blank">The View from The Shard</a></td>
+                <td>1:30 PM – 2:30 PM</td>
+                <td>20-minute walk</td>
+                <td>10:00 AM – 10:00 PM (last entry 9:00 PM)</td>
+                <td>Experience panoramic views of London from the observation deck.</td>
+            </tr>
+            <tr class="day1-row">
+                <td><a href="https://maps.app.goo.gl/fM4ffnn9NAJarrpe7" target="_blank">Palace of Westminster</a></td>
+                <td>4:00 PM – 4:45 PM</td>
+                <td>30-minute travel</td>
+                <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
+                <td>Houses of Parliament after the House of Commons & the House of Lords, the two legislative chambers which occupy the building.</td>
+            </tr>
+        </table></div>
+
+        <!-- Day 2 -->
+        <div class="table-wrapper"><table>
+            <tr class="day-header day2">
+                <td colspan="5">Day 2: June 22 (Sunday)</td>
+            </tr>
+            <tr>
+                <th>Attraction</th>
+                <th>Time</th>
+                <th>Travel</th>
+                <th>Opening Hours</th>
+                <th>Highlights</th>
+            </tr>
+            <tr class="day2-row">
+                <td><a href="https://maps.app.goo.gl/5eZYP8D6Hts6mr42A" target="_blank">The South Bank Photography</a></td>
+                <td>8:00 AM – 9:30 AM</td>
+                <td>-</td>
+                <td>-</td>
+                <td>Capture iconic views of the London Eye, Big Ben, & the Thames.</td>
+            </tr>
+            <tr class="day2-row">
+                <td><a href="https://maps.app.goo.gl/tfLnHkmEzhvgRG6NA" target="_blank">London Zoo & Regent's Park</a></td>
+                <td>10:30 AM – 1:30 PM</td>
+                <td>45-minute travel</td>
+                <td>10:00 AM – 6:00 PM (last admission 5:00 PM)</td>
+                <td>Explore diverse animal exhibits and interactive displays.</td>
+            </tr>
+            <tr class="day2-row">
+                <td><a href="https://maps.app.goo.gl/njXNEYrf8YTnzbNK6" target="_blank">Natural History Museum</a></td>
+                <td>3:00 PM – 5:30 PM</td>
+                <td>45-minute travel</td>
+                <td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
+                <td>Discover exhibits on dinosaurs, human evolution, and more.</td>
+            </tr>
+        </table></div>
+
+        <!-- Day 3 -->
+        <div class="table-wrapper"><table>
+            <tr class="day-header day3">
+                <td colspan="5">Day 3: June 23 (Monday)</td>
+            </tr>
+            <tr>
+                <th>Attraction</th>
+                <th>Time</th>
+                <th>Travel</th>
+                <th>Opening Hours</th>
+                <th>Highlights</th>
+            </tr>
+            <tr class="day3-row">
+                <td><a href="https://maps.app.goo.gl/NVKSzQVuGLTHicjr8" target="_blank">Westminster Abbey</a></td>
+                <td>9:30 AM – 11:00 AM</td>
+                <td>-</td>
+                <td>9:30 AM – 3:30 PM (last entry 3:00 PM)</td>
+                <td>Visit the historic church known for royal ceremonies.</td>
+            </tr>
+            <tr class="day3-row">
+                <td><a href="https://maps.app.goo.gl/9vo46LGErMH6TtDk6" target="_blank">Horse Guards Parade</a></td>
+                <td>11:15 AM – 12:30 PM</td>
+                <td>10-minute walk</td>
+                <td>-</td>
+                <td>Witness the Changing of the Guard ceremony.</td>
+            </tr>
+            <tr class="day3-row">
+                <td><a href="https://maps.app.goo.gl/NcRKrri8ey6ntpQa8" target="_blank">St. Paul's Cathedral</a></td>
+                <td>1:30 PM – 3:30 PM</td>
+                <td>15-minute travel</td>
+                <td>8:30 AM – 4:30 PM (last entry 4:00 PM)</td>
+                <td>Explore the iconic dome and crypt.</td>
+            </tr>
+            <tr class="day3-row">
+                <td><a href="https://maps.app.goo.gl/dmvmfJny2yHFygZ89" target="_blank">Little Venice</a></td>
+                <td>4:00 PM – 5:30 PM</td>
+                <td>30-minute travel</td>
+                <td>-</td>
+                <td>Peaceful canal walk & picturesque views.</td>
+            </tr>
+        </table></div>
+
+        <!-- Day 4 -->
+        <div class="table-wrapper"><table>
+            <tr class="day-header day4">
+                <td colspan="5">Day 4: June 24 (Tuesday)</td>
+            </tr>
+            <tr>
+                <th>Attraction</th>
+                <th>Time</th>
+                <th>Travel</th>
+                <th>Opening Hours</th>
+                <th>Highlights</th>
+            </tr>
+            <tr class="day4-row">
+                <td><a href="https://maps.app.goo.gl/2UBFx7GzXmYPcuE79" target="_blank">Thames River Cruise</a></td>
+                <td>10:00 AM</td>
+                <td>Hop on Hop off (Stop #16) to Westminster Pier</td>
+                <td>-</td>
+                <td>View landmarks like Tower Bridge and the Shard from the river.</td>
+            </tr>
+            <tr class="day4-row">
+                <td><a href="https://maps.app.goo.gl/Hc9BxYN7G6PcEnPw7" target="_blank">London Eye</a></td>
+                <td>12:30 PM – 1:30 PM</td>
+                <td>10-minute walk</td>
+                <td>11:00 AM – 6:00 PM</td>
+                <td>Experience panoramic views of London from the giant Ferris wheel.</td>
+            </tr>
+            <tr class="day4-row">
+                <td><a href="https://maps.app.goo.gl/6BPH3Z269joYaSA36" target="_blank">Hop on Hop off & Notting Hill</a></td>
+                <td>2:30 PM – 6:00 PM</td>
+                <td>Hop on Hop off</td>
+                <td>-</td>
+                <td>Explore Portobello Road Market Lancaster Rd.</td>
+            </tr>
+        </table></div>
+
+        <!-- Day 5 -->
+        <div class="table-wrapper"><table>
+            <tr class="day-header day5">
+                <td colspan="5">Day 5: June 25 (Wednesday)</td>
+            </tr>
+            <tr>
+                <th>Attraction</th>
+                <th>Time</th>
+                <th>Travel</th>
+                <th>Opening Hours</th>
+                <th>Highlights</th>
+            </tr>
+            <tr class="day5-row">
+                <td><a href="https://maps.app.goo.gl/Fved7rZQojmG2wJJ9" target="_blank">Hyde Park</a></td>
+                <td>9:00 AM – 10:30 AM</td>
+                <td>-</td>
+                <td>5:00 AM – 12:00 AM</td>
+                <td>Relax in one of London's largest parks, visit the Serpentine Lake.</td>
+            </tr>
+            <tr class="day5-row">
+                <td><a href="https://maps.app.goo.gl/FxAgnKP9hhqFuS6X6" target="_blank">Buckingham Palace (Exterior Viewing)</a></td>
+                <td>10:30 AM – 12:00 PM</td>
+                <td>15-minute walk</td>
+                <td>-</td>
+                <td>Experience change of guard parade.</td>
+            </tr>
+            <tr class="day5-row">
+                <td><a href="https://maps.app.goo.gl/83bwRRrimJd5ELyt7" target="_blank">British Museum</a></td>
+                <td>12:30 PM – 3:00 PM</td>
+                <td>20-minute travel</td>
+                <td>10:00 AM – 5:00 PM (Fridays until 8:30 PM)</td>
+                <td>Discover artifacts from ancient civilizations.</td>
+            </tr>
+            <tr class="day5-row">
+                <td><a href="https://maps.app.goo.gl/1SM6VuqmrqAyD99n6" target="_blank">Dr. B.R. Ambedkar House</a></td>
+                <td>3:30 PM – 4:30 PM</td>
+                <td>30-minute travel</td>
+                <td>11:00 AM – 5:00 PM (Monday to Friday)</td>
+                <td>Explore the life and work of Dr. B.R. Ambedkar.</td>
+            </tr>
+        </table></div>
+    </div>
+	<div class="footer">
+    <p>Created by Amit, in love with the UK</p>
 </div>
 </body>
 </html>
