--- a/index.html
+++ b/index.html
@@ -133,13 +133,7 @@
             font-size: .9em;
             color: #666;
         }
-    
-.table-wrapper {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-}
-
-</style>
+    </style>
 </head>
 <body>
     <div class="container">
@@ -147,7 +141,7 @@
         <h2>For Four People</h2>
 
         <!-- Day 1 -->
-        <div class="table-wrapper"><table>
+        <table>
             <tr class="day-header day1">
                 <td colspan="5">Day 1: June 21 (Saturday)</td>
             </tr>
@@ -186,10 +180,10 @@
                 <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
                 <td>Houses of Parliament after the House of Commons & the House of Lords, the two legislative chambers which occupy the building.</td>
             </tr>
-        </table></div>
+        </table>
 
         <!-- Day 2 -->
-        <div class="table-wrapper"><table>
+        <table>
             <tr class="day-header day2">
                 <td colspan="5">Day 2: June 22 (Sunday)</td>
             </tr>
@@ -221,10 +215,10 @@
                 <td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
                 <td>Discover exhibits on dinosaurs, human evolution, and more.</td>
             </tr>
-        </table></div>
+        </table>
 
         <!-- Day 3 -->
-        <div class="table-wrapper"><table>
+        <table>
             <tr class="day-header day3">
                 <td colspan="5">Day 3: June 23 (Monday)</td>
             </tr>
@@ -263,10 +257,10 @@
                 <td>-</td>
                 <td>Peaceful canal walk & picturesque views.</td>
             </tr>
-        </table></div>
+        </table>
 
         <!-- Day 4 -->
-        <div class="table-wrapper"><table>
+        <table>
             <tr class="day-header day4">
                 <td colspan="5">Day 4: June 24 (Tuesday)</td>
             </tr>
@@ -298,10 +292,10 @@
                 <td>-</td>
                 <td>Explore Portobello Road Market Lancaster Rd.</td>
             </tr>
-        </table></div>
+        </table>
 
         <!-- Day 5 -->
-        <div class="table-wrapper"><table>
+        <table>
             <tr class="day-header day5">
                 <td colspan="5">Day 5: June 25 (Wednesday)</td>
             </tr>
@@ -340,7 +334,7 @@
                 <td>11:00 AM – 5:00 PM (Monday to Friday)</td>
                 <td>Explore the life and work of Dr. B.R. Ambedkar.</td>
             </tr>
-        </table></div>
+        </table>
     </div>
 	<div class="footer">
     <p>Created by Amit, in love with the UK</p>
