--- a/index.html
+++ b/index.html
@@ -133,12 +133,24 @@
             font-size: .9em;
             color: #666;
         }
+    
+        @media screen and (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+            table {
+                display: block;
+                overflow-x: auto;
+                white-space: nowrap;
+            }
+        }
     </style>
+    
 </head>
 <body>
     <div class="container">
         <h1>👑 London Itinerary: June 21–25, 2025</h1>
-        <h2>For Four People</h2>
+        <h2>Family Trip</h2>
 
         <!-- Day 1 -->
         <table>
@@ -335,6 +347,19 @@
                 <td>Explore the life and work of Dr. B.R. Ambedkar.</td>
             </tr>
         </table>
+    </div>
+
+
+    <div class="container">
+        <h2>Additional Links</h2>
+        <ul style="font-size: 16px; color: #333;">
+			<li><a href="https://maps.app.goo.gl/GiUBTC1nuNjNqvoK8" target="_blank">Our Stay</a></li>
+            <li><a href="https://www.bigbustours.com/en/london/blue-route-london" target="_blank">Big Bus Blue Route Timetable</a></li>
+            <li><a href="https://www.bigbustours.com/en/london/red-route-london" target="_blank">Big Bus Red Route Timetable</a></li>
+            <li><a href="https://www.bigbustours.com/en/london/london-river-cruises" target="_blank">Big Bus London River Cruises</a></li>
+			<li><a href="https://maps.app.goo.gl/ZbJW7WWEUfWfjC1fA" target="_blank">Regent St.</a></li>
+			<li><a href="https://maps.app.goo.gl/BBWop54WVbjvNkUx5" target="_blank">Millennium Bridge</a></li>
+        </ul>
     </div>
 	<div class="footer">
     <p>Created by Amit, in love with the UK</p>
