--- a/index.html
+++ b/index.html
@@ -134,26 +134,22 @@
             color: #666;
         }
     
-        @media screen and (max-width: 768px) {
-            .container {
-                padding: 10px;
-            }
-            table {
-                display: block;
-                overflow-x: auto;
-                white-space: nowrap;
-            }
+        .table-wrapper {
+            overflow-x: auto;
         }
-    </style>
+        table {
+            width: 100%;
+        }
     
+</style>
 </head>
 <body>
     <div class="container">
         <h1>👑 London Itinerary: June 21–25, 2025</h1>
-        <h2>Family Trip</h2>
+        <h2>For Four People</h2>
 
         <!-- Day 1 -->
-        <table>
+        <div class='table-wrapper'><table>
             <tr class="day-header day1">
                 <td colspan="5">Day 1: June 21 (Saturday)</td>
             </tr>
@@ -192,10 +188,10 @@
                 <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
                 <td>Houses of Parliament after the House of Commons & the House of Lords, the two legislative chambers which occupy the building.</td>
             </tr>
-        </table>
+        </table></div>
 
         <!-- Day 2 -->
-        <table>
+        <div class='table-wrapper'><table>
             <tr class="day-header day2">
                 <td colspan="5">Day 2: June 22 (Sunday)</td>
             </tr>
@@ -227,10 +223,10 @@
                 <td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
                 <td>Discover exhibits on dinosaurs, human evolution, and more.</td>
             </tr>
-        </table>
+        </table></div>
 
         <!-- Day 3 -->
-        <table>
+        <div class='table-wrapper'><table>
             <tr class="day-header day3">
                 <td colspan="5">Day 3: June 23 (Monday)</td>
             </tr>
@@ -269,10 +265,10 @@
                 <td>-</td>
                 <td>Peaceful canal walk & picturesque views.</td>
             </tr>
-        </table>
+        </table></div>
 
         <!-- Day 4 -->
-        <table>
+        <div class='table-wrapper'><table>
             <tr class="day-header day4">
                 <td colspan="5">Day 4: June 24 (Tuesday)</td>
             </tr>
@@ -304,10 +300,10 @@
                 <td>-</td>
                 <td>Explore Portobello Road Market Lancaster Rd.</td>
             </tr>
-        </table>
+        </table></div>
 
         <!-- Day 5 -->
-        <table>
+        <div class='table-wrapper'><table>
             <tr class="day-header day5">
                 <td colspan="5">Day 5: June 25 (Wednesday)</td>
             </tr>
@@ -346,10 +342,8 @@
                 <td>11:00 AM – 5:00 PM (Monday to Friday)</td>
                 <td>Explore the life and work of Dr. B.R. Ambedkar.</td>
             </tr>
-        </table>
+        </table></div>
     </div>
-
-
     <div class="container">
         <h2>Additional Links</h2>
         <ul style="font-size: 16px; color: #333;">
